Wrong keyframe color indicators when editing NLA strips #41525

Closed
opened 2014-08-21 15:19:07 +02:00 by David Gascueña · 7 comments

System Information
Ubuntu 64 14.04

Blender Version
Blender trunk 7ef9257

Short description of error
The colors in outliner indicating keyframes, doesn't respect the information in other editors.
mographEffectsBug.blend

Exact steps for others to reproduce the error
Open the file, and move frame to frame to the right.
The original action that NLA strips reference had keyframes in 1, 7 and 21.
Since NLA strip has been moved, this keys are now in 4, 10 and 24.
But in outliner, the colors still change at 1, 7, and 24.

Doesn't know how this is supposed to work, but I would expect that if I am tweaking a basic action, the information in graph editor and dopesheet should reflect the original action, not the changed one throug NLA strips.

**System Information** Ubuntu 64 14.04 **Blender Version** Blender trunk 7ef9257 **Short description of error** The colors in outliner indicating keyframes, doesn't respect the information in other editors. [mographEffectsBug.blend](https://archive.blender.org/developer/F105973/mographEffectsBug.blend) **Exact steps for others to reproduce the error** Open the file, and move frame to frame to the right. The original action that NLA strips reference had keyframes in 1, 7 and 21. Since NLA strip has been moved, this keys are now in 4, 10 and 24. But in outliner, the colors still change at 1, 7, and 24. Doesn't know how this is supposed to work, but I would expect that if I am tweaking a basic action, the information in graph editor and dopesheet should reflect the original action, not the changed one throug NLA strips.

Changed status to: 'Open'

Changed status to: 'Open'
Joshua Leung was assigned by David Gascueña 2014-08-21 15:19:07 +02:00

Added subscriber: @DavidGascuena

Added subscriber: @DavidGascuena
Member

ui_but_anim_flag() needs to be modified to apply NLA mapping to the cfra before using it to check for keyframes on the relevant FCurve.

ui_but_anim_flag() needs to be modified to apply NLA mapping to the cfra before using it to check for keyframes on the relevant FCurve.

Thanks. I'm a developer, trying to learn blender code (fiuu, thats a tough one). I'm also interested in mograph in blender, so expect more of these finickies from me (sorry :( )
But, I'll try to read your commits, so I can't help in the future to make blender more mograph friendly.

Thanks. I'm a developer, trying to learn blender code (fiuu, thats a tough one). I'm also interested in mograph in blender, so expect more of these finickies from me (sorry :( ) But, I'll try to read your commits, so I can't help in the future to make blender more mograph friendly.

This issue was referenced by 2625dc5348

This issue was referenced by 2625dc53487971d3def110ca70b88c178f772712
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit 2625dc5348.

Closed by commit 2625dc5348.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41525
No description provided.